[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/NPCs/CopNPC.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player/2DPlayer01/2DPlayerAvatar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/_debug/emptyTestWithCops.gd" type="Script" id=3]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/PatrolRoutes/NPCPatrolRouteSmallCircle.tscn" type="PackedScene" id=4]

[node name="emptyTest" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerDetective" parent="." instance=ExtResource( 2 )]
position = Vector2( 654, 327 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "CopNPC" ), [ ExtResource( 1 ) ] ]

[node name="NPCSpawnPosition" type="Position2D" parent="."]
position = Vector2( 320, 219 )

[node name="AvailablePatrolRoutes" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "NPCPatrolRouteSmallCircle" ), [ ExtResource( 4 ) ] ]

[node name="NPCs" type="Node2D" parent="."]

[node name="CopNPC" parent="NPCs" instance=ExtResource( 1 )]
position = Vector2( 266, 184 )

[node name="CopNPC2" parent="NPCs" instance=ExtResource( 1 )]
position = Vector2( 721, 173 )

[node name="CopNPC3" parent="NPCs" instance=ExtResource( 1 )]
position = Vector2( 376, 454 )
